--- a/index.html
+++ b/index.html
@@ -14,24 +14,30 @@ overview: true
 <section class="features {{ page.title | slugify }}">
   <div class="grid">
     <div class="unit whole center-on-mobiles">
-      <h2>Plugins</h2>
-      {% for plugins in site.plugins reversed limit:30 %}
-      {% capture modulo %}{{ forloop.index0 | modulo:3 }}{% endcapture %}
-      {% if modulo == '0' or forloop.first %}
-        <div class="grid">
-      {% endif %}
-        <div class="unit one-third">
-          <a href="{{ plugins.url | prepend: site.baseurl }}" title="{{ plugins.title }}">{{ plugins.title }}</a>
-        </div>
-      {% if modulo == '2' or forloop.last %}
-        </div>
-      {% endif %}
-      {% if forloop.last %}
-      <p class="call-to-action align-center">
-       <a href="{{ "/plugins/" | prepend: site.baseurl }}">Browse all plugins →</a>
-      </p>
-      {% endif %}
-      {% endfor %}
+
+      <div id="search-searchbar"></div>
+
+      <h2 class="main-title">Plugins</h2>
+
+      <div class="plugin-list" id="search-hits">
+        {% for plugins in site.plugins reversed limit:30 %}
+        {% capture modulo %}{{ forloop.index0 | modulo:3 }}{% endcapture %}
+        {% if modulo == '0' or forloop.first %}
+          <div class="grid">
+        {% endif %}
+          <div class="unit one-third">
+            <a href="{{ plugins.url | relative_url }}" title="{{ plugins.title }}">{{ plugins.title }}</a>
+          </div>
+        {% if modulo == '2' or forloop.last %}
+          </div>
+        {% endif %}
+        {% if forloop.last %}
+        <p class="call-to-action align-center">
+         <a href="{{ "/plugins/" | relative_url }}">Browse all plugins →</a>
+        </p>
+        {% endif %}
+        {% endfor %}
+      </div>
     </div>
     <div class="grid">
       <div class="unit whole center-on-mobiles">
@@ -63,3 +69,5 @@ overview: true
     </div>
   </div>
 </section>
+
+  {% include algolia.html %}
