--- a/plugins.html
+++ b/plugins.html
@@ -6,6 +6,9 @@ permalink: /plugins/
 
 <div class="search-container">
   <div id="search-searchbar"></div>
+  <div class="ais-search-box--powered-by">
+    <a class="ais-search-box--powered-by-link" href="https://www.algolia.com/?utm_source=instantsearch.js&amp;utm_medium=website&amp;utm_content=community.algolia.com&amp;utm_campaign=poweredby" target="_blank">Algolia</a>
+  </div>
   <div id="stats-container"></div>
   <div class="plugin-list" id="search-hits">
     <ul>
